--- a/index.html
+++ b/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
     <title>Calculator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <div id="calculator">
-        <div class="display-container">
-            <input type="text" id="display" readonly>
-        </div>
-        <div class="button-container">
-            <div class="row">
-                <button class="calc-button" onclick="clearDisplay()">C</button>
-                <button class="calc-button" onclick="appendToDisplay('7')">7</button>
-                <button class="calc-button" onclick="appendToDisplay('8')">8</button>
-                <button class="calc-button" onclick="appendToDisplay('9')">9</button>
-                <button class="calc-button operation" onclick="appendToDisplay('+')">+</button>
-            </div>
-            <div class="row">
-                <button class="calc-button" onclick="appendToDisplay('4')">4</button>
-                <button class="calc-button" onclick="appendToDisplay('5')">5</button>
-                <button class="calc-button" onclick="appendToDisplay('6')">6</button>
-                <button class="calc-button operation" onclick="appendToDisplay('-')">-</button>
-            </div>
-            <div class="row">
-                <button class="calc-button" onclick="appendToDisplay('1')">1</button>
-                <button class="calc-button" onclick="appendToDisplay('2')">2</button>
-                <button class="calc-button" onclick="appendToDisplay('3')">3</button>
-                <button class="calc-button operation" onclick="appendToDisplay('*')">*</button>
-            </div>
-            <div class="row">
-                <button class="calc-button" onclick="appendToDisplay('0')">0</button>
-                <button class="calc-button operation" onclick="calculateResult()">=</button>
-                <button class="calc-button operation" onclick="appendToDisplay('/')">/</button>
-            </div>
-        </div>
-        
-        <!-- Copyright Notice within Calculator Area -->
-        <div class="copyright-notice">
-            &copy; Ajmaltech 2023 
-        </div>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="calculator-grid">
+    <div class="output">
+    <div data-previous-operand class="previous-operand"></div>
+    <div data-current-operand class="current-operand"></div>
     </div>
-    <script src="script.js"></script>
-</body>
+    <button data-all-clear class="span-two">AC</button>
+    <button data-delete>DEL</button>
+    <button data-operation>÷</button>
+    <button data-number>1</button>
+    <button data-number>2</button>
+    <button data-number>3</button>
+    <button data-operation>*</button>
+    <button data-number>4</button>
+    <button data-number>5</button>
+    <button data-number>6</button>
+    <button data-operation>+</button>
+    <button data-number>7</button>
+    <button data-number>8</button>
+    <button data-number>9</button>
+    <button data-operation>-</button>
+    <button data-number>.</button>
+    <button data-number>0</button>
+    <button data-equals class="span-two">=</button>
+
+    </div>
+
+  </body>
 </html>
